syntax = "proto3";

package proto;

option go_package = "GophKeeper/internal/server/adapter/proto";


message LoginUserRequest {
  string login = 1;
  string password_hash = 2;
}

message RegisterUserRequest {
  string login = 1;
  string password_hash = 2;
}

message LoginUserResponse{
  string token = 1;
  string error = 2;
}

message RegisterUserResponse{
  string token = 1;
  string error = 2;
}

service Auth {
  rpc Register(RegisterUserRequest) returns (RegisterUserResponse);
  rpc Login(LoginUserRequest) returns (LoginUserResponse);
}